--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+body {
+  background: url(./assets/adventure.jpg) no-repeat center center fixed;
+  background-size: cover;
+  font-family: sans-serif;
+}
+/* input .error {
+  border-bottom: 2px solid red;
+} */
+.error-text {
+  color: rgb(235, 54, 54);
+  margin-top: -15px;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.login_text {
+  width: 320px;
+  height: 450px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 50px 30px;
+}
+
+.login_text input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+button {
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #fb2525;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 15px;
+  width: 100%;
+}
+
+button:hover {
+  cursor: pointer;
+  background: #07e2ff;
+  color: #000;
+}
+
+h1 {
+  padding: 0 0 20px;
+  margin-top: 2%;
   text-align: center;
+  font-size: 32px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.texts {
+  border: none;
+  border-bottom: 2px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 48px;
+  color: #fff;
+  font-size: 16px;
 }
